--- a/AgibotWorld.ipynb
+++ b/AgibotWorld.ipynb
@@ -13,12 +13,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m运行具有“base (Python 3.10.14)”的单元格需要ipykernel包。\n",
+      "\u001b[1;31m运行以下命令，将 \"ipykernel\" 安装到 Python 环境中。\n",
+      "\u001b[1;31m命令: \"conda install -n base ipykernel --update-deps --force-reinstall\""
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# =============================================\n",
     "# 1. Imports and Parameter Settings\n",
@@ -32,6 +39,7 @@
     "\n",
     "# Parameters\n",
     "FPS = 30\n",
+    "TASK_ID = 352\n",
     "training_steps = 5000\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
@@ -43,11 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# =============================================\n",
@@ -55,6 +59,7 @@
     "# =============================================\n",
     "observation_idx = np.array([-1, 0])\n",
     "action_idx = np.arange(-1, 15)\n",
+    "repo_id = f\"agibotworld/task_{TASK_ID}\"\n",
     "\n",
     "delta_timestamps = {\n",
     "    \"observation.images.top_head\": (observation_idx / FPS).tolist(),\n",
@@ -63,8 +68,8 @@
     "}\n",
     "\n",
     "dataset = LeRobotDataset(\n",
-    "    repo_id=\"agibot/gripper\",\n",
-    "    root=dataset_path,\n",
+    "    repo_id=repo_id,\n",
+    "    root=f\"{dataset_path}/{repo_id}\",\n",
     "    delta_timestamps=delta_timestamps,\n",
     "    local_files_only=True\n",
     ")\n",
@@ -80,13 +85,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You could also load the multi-task dataset using `MultiLeRobotDataset`:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "from lerobot.common.datasets.lerobot_dataset import MultiLeRobotDataset\n",
+    "repo_ids = [f\"agibotworld/{path.name}\" for path in Path(dataset_path).glob(\"agibotworld/task_*\")]\n",
+    "multi_dataset = MultiLeRobotDataset(\n",
+    "    repo_ids=repo_ids,\n",
+    "    root=dataset_path,\n",
+    "    delta_timestamps=delta_timestamps,\n",
+    "    local_files_only=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's kick off a simple training with Diffusion Policy:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# =============================================\n",
@@ -106,6 +138,7 @@
     "}\n",
     "\n",
     "policy = DiffusionPolicy(cfg, dataset_stats=dataset.meta.stats)\n",
+    "#policy = DiffusionPolicy(cfg, dataset_stats=multi_dataset.stats)\n",
     "policy.train()\n",
     "policy.to(device)\n",
     "\n",
@@ -115,11 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# =============================================\n",
@@ -149,11 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# =============================================\n",
@@ -162,11 +187,24 @@
     "policy.save_pretrained(output_path)\n",
     "print(f\"Model saved to {output_path}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Congrats! Now please feel free to explore the AgiBot World!"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
